--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,9 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .input-box {
@@ -57,4 +59,9 @@ body {
   position: absolute;
   bottom: 0px;
   left: 5px;
+}
+
+.chat-scroll::-webkit-scrollbar {
+  width: 5px;
+  background: transparent;
 }
