--- a/src/page/AuthPages/index.css
+++ b/src/page/AuthPages/index.css
@@ -10,7 +10,7 @@
 }
 
 .login-signin-card {
-  width: 30%;
+  width: min(30%, 500px);
   height: fit-content;
   background: #fff;
   border-radius: 10px;
@@ -24,12 +24,12 @@
 
 @keyframes login-signin-card {
   0% {
-    transform: translateY(-2px);
+    /* transform: translateY(-2px); */
     box-shadow: 0px 5px 20px rgba(48, 124, 255, 0.3);
   }
 
   100% {
-    transform: translateY(2px);
+    /* transform: translateY(2px); */
     box-shadow: 0px 10px 40px rgba(48, 124, 255, 0.5);
   }
 }
