add socket connection & online offline status and contacts

--- a/src/page/AuthPages/index.css
+++ b/src/page/AuthPages/index.css
@@ -108,3 +108,13 @@
   padding: 5px;
   letter-spacing: 0.5px;
 }
+
+.password-eye-icon {
+  position: absolute;
+  right: 10px;
+  top: 40%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #2f7eff;
+  transition: color 0.3s ease;
+}
