--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,19 @@ body {
   width: 100%;
   height: 100%;
 }
+p,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 
 .app {
   width: 100vw;
