--- a/src/page/Chat/AddNewChat/AddNewChat.css
+++ b/src/page/Chat/AddNewChat/AddNewChat.css
@@ -11,8 +11,147 @@
 .add-new-chat-content {
   background: #ffffff;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px 20px 20px 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
   height: 100%;
+}
+
+.new-chat-header {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.new-chat-close-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s;
+  border-radius: 50%;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+}
+
+.sent-request-search-box {
+  width: 100%;
+  margin-top: 20px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.sent-request-search-input {
+  width: 100%;
+  padding: 5px 10px;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: 500;
+  outline: none;
+  border-radius: 50px;
+  height: 40px;
+  border: 1px solid #e6ebf7;
+  background: #f6f7f8;
+  padding-left: 40px;
+  transition: all 0.3s;
+}
+.sent-request-search-input::placeholder {
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+.sent-request-search-input:focus {
+  border: 1px solid #2f7eff;
+}
+
+.sent-request-search-label {
+  position: absolute;
+  left: 15px;
+  top: 6px;
+  color: #999999;
+  pointer-events: none;
+}
+
+/* This changes label color when input is focused */
+.sent-request-search-box:focus-within .chat-search-label {
+  color: #2f7eff;
+}
+
+.sent-request-list {
+  width: 100%;
+  height: calc(400px);
+  overflow-y: auto;
+  background: #f1f1f1;
+  border-radius: 5px;
+  border: 1px solid #e6ebf7;
+  margin-top: 20px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  overflow-y: auto;
+}
+
+.sent-request-item {
+  width: 100%;
+  padding: 10px;
+  background: #ffffff;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  border-radius: 5px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0);
+  padding: 0px 15px;
+  transition: all 0.3s;
+  &:hover {
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  }
+}
+
+.sent-request-avatar {
+  width: 50px;
+  height: 50px;
+  background: #2f7eff;
+  color: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.sent-request-info {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 140px);
+}
+.sent-request-name {
+  font-size: 18px;
+  font-weight: 500;
+  color: #333333;
+  margin: 0;
+  padding: 0;
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+.sent-request-status {
+  font-size: 14px;
+  color: #999999;
+  margin: 0;
+  padding: 0;
+  height: 20px;
+  display: flex;
+  align-items: center;
 }
