--- a/src/page/Chat/MessageRequest/MessageRequest.css
+++ b/src/page/Chat/MessageRequest/MessageRequest.css
@@ -1,4 +1,4 @@
-.add-new-chat-modal {
+.message-request-modal {
   background-color: #f0f4f8;
   border-radius: 10px;
   padding: 20px;
@@ -8,7 +8,7 @@
   backdrop-filter: blur(3px);
 }
 
-.add-new-chat-content {
+.message-request-content {
   background: #ffffff;
   border-radius: 10px;
   padding: 10px 20px 20px 20px;
@@ -17,7 +17,7 @@
   height: 100%;
 }
 
-.new-chat-header {
+.message-request-header {
   width: 100%;
   height: 40px;
   display: flex;
@@ -25,7 +25,7 @@
   align-items: center;
 }
 
-.new-chat-close-button {
+.message-request-close-button {
   background: transparent;
   border: none;
   cursor: pointer;
@@ -41,51 +41,7 @@
   }
 }
 
-.sent-request-search-box {
-  width: 100%;
-  margin-top: 20px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-.sent-request-search-input {
-  width: 100%;
-  padding: 5px 10px;
-  font-size: 14px;
-  letter-spacing: 1px;
-  font-weight: 500;
-  outline: none;
-  border-radius: 50px;
-  height: 40px;
-  border: 1px solid #e6ebf7;
-  background: #f6f7f8;
-  padding-left: 40px;
-  transition: all 0.3s;
-}
-.sent-request-search-input::placeholder {
-  font-size: 14px;
-  letter-spacing: 1px;
-  font-weight: 500;
-}
-.sent-request-search-input:focus {
-  border: 1px solid #2f7eff;
-}
-
-.sent-request-search-label {
-  position: absolute;
-  left: 15px;
-  top: 6px;
-  color: #999999;
-  pointer-events: none;
-}
-
-/* This changes label color when input is focused */
-.sent-request-search-box:focus-within .chat-search-label {
-  color: #2f7eff;
-}
-
-.sent-request-list {
+.message-request-box {
   width: 100%;
   height: 400px;
   overflow-y: auto;
@@ -100,14 +56,13 @@
   overflow-y: auto;
 }
 
-.sent-request-item {
+.message-request-item {
   width: 100%;
   padding: 10px;
   background: #ffffff;
   min-height: 70px;
   display: flex;
   align-items: center;
-  gap: 0px;
   cursor: pointer;
   transition: background-color 0.3s;
   border-radius: 5px;
@@ -119,13 +74,14 @@
   }
 }
 
-.sent-request-avatar {
+.message-request-avatar {
   background: #2f7eff;
   color: #ffffff;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 20px;
   width: 48px;
   height: 48px;
   font-weight: 500;
@@ -135,12 +91,13 @@
   text-transform: uppercase;
 }
 
-.sent-request-info {
+.message-request-info {
   display: flex;
   flex-direction: column;
   width: calc(100% - 250px);
 }
-.sent-request-name {
+
+.message-request-name {
   font-size: 18px;
   font-weight: 500;
   color: #333333;
@@ -150,7 +107,7 @@
   display: flex;
   align-items: center;
 }
-.sent-request-status {
+.message-request-status {
   font-size: 14px;
   color: #999999;
   margin: 0;
@@ -160,75 +117,10 @@
   align-items: center;
 }
 
-.sent-request-btn-group {
+.message-request-btn-group {
   width: 200px;
   display: flex;
   align-items: center;
   justify-content: end;
   gap: 10px;
-}
-
-.no-result {
-  text-align: center;
-  color: #aaa;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-
-.no-user-text {
-  margin-top: 10px;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.crazy-message {
-  margin-top: 0px;
-  font-size: 14px;
-  color: #2f7eff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
-  animation: pulse 2s infinite linear alternate;
-}
-
-.icon-spin {
-  font-size: 20px;
-  animation: spin 3s infinite linear;
-  color: #2f7eff;
-}
-
-.bounce-icon {
-  color: #aaa;
-  animation: bounce 3s infinite linear;
-}
-
-@keyframes spin {
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes bounce {
-  0%,
-  100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-6px);
-  }
-}
-
-@keyframes pulse {
-  0%,
-  100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.6;
-  }
 }
