--- a/src/page/Chat/Chat.css
+++ b/src/page/Chat/Chat.css
@@ -427,3 +427,29 @@
 .chat-send-btn:hover {
   background: #1e40af; /* 'hover:bg-primary/90' */
 }
+
+.bobble-count {
+  background-color: #fff;
+  color: #2563eb;
+  font-weight: 500;
+  font-size: 10px;
+  border-radius: 9999px;
+  min-width: 10px;
+  height: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  user-select: none;
+  padding: 5px;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  box-sizing: content-box;
+  border: 2px solid #2563eb;
+}
+
+.request-btn {
+  position: relative;
+}
