--- a/src/page/Chat/Chat.css
+++ b/src/page/Chat/Chat.css
@@ -165,7 +165,7 @@
   width: 48px;
   height: 48px;
   border-radius: 9999px;
-  background-color: #2563eb; /* Tailwind's bg-primary */
+  background-color: #4768af; /* Tailwind's bg-primary */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -173,8 +173,11 @@
   font-weight: 500;
   margin-right: 12px;
   letter-spacing: 1px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.07); /* shadow-soft approximation */
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1),
+    inset 0px -5px 15px rgba(0, 0, 0, 0.1),
+    inset 0px 5px 15px rgba(255, 255, 255, 0.2); /* shadow-soft approximation */
   text-transform: uppercase;
+  position: relative;
 }
 
 .contact-info {
@@ -223,16 +226,17 @@
   background-color: #2563eb; /* Tailwind's bg-primary */
   color: #fff; /* Tailwind's text-primary-foreground */
   font-weight: 600;
-  font-size: 12px;
+  font-size: 11px;
   border-radius: 9999px;
-  min-width: 20px;
-  height: 20px;
+  min-width: 23px;
+  height: 23px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
   user-select: none;
+  padding: 5px;
 }
 .contact-read {
   background-color: transparent; /* Tailwind's bg-primary */
@@ -455,4 +459,25 @@
 
 .request-btn {
   position: relative;
+}
+
+.contact-status {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background-color: #269405;
+  color: #fff;
+  font-weight: 500;
+  font-size: 10px;
+  border-radius: 9999px;
+  min-width: 8px;
+  height: 8px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  user-select: none;
+  padding: 4px;
+  border: 2px solid #ffffff;
 }
