--- a/src/page/Chat/MessageBubble/MessageBubble.css
+++ b/src/page/Chat/MessageBubble/MessageBubble.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: 20rem; /* ~320px, like max-w-xs */
+  margin-bottom: 10px;
 }
 
 @media (min-width: 1024px) {
@@ -10,6 +11,47 @@
   }
 }
 
+.join-chat-bubble-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  align-items: center;
+  margin: 20px;
+  margin-bottom: 40px;
+}
+
+.join-chat-bubble {
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  color: #2563eb;
+  box-shadow: 0px 5px 5px rgba(48, 124, 255, 0.1);
+  letter-spacing: 1px;
+}
+.join-chat-time {
+  font-size: 12px;
+  color: #6b7280;
+  letter-spacing: 1px;
+  margin-bottom: 1px;
+  padding: 3px 8px;
+  background: #f3f4f6;
+  position: absolute;
+}
+.line {
+  position: relative;
+  width: 100%;
+  height: 1px;
+  background-color: #e2e2e2;
+  left: 0;
+  bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
 .message-user {
   margin-left: auto;
   align-items: flex-end;
@@ -53,7 +95,7 @@
 .message-time {
   font-size: 12px;
   color: #6b7280; /* text-muted-foreground */
-  margin-top: 4px;
+  margin-top: 0px;
   padding-left: 4px;
   padding-right: 4px;
   letter-spacing: 0.5px;
