--- a/src/page/Chat/MessageBubble/MessageBubble.css
+++ b/src/page/Chat/MessageBubble/MessageBubble.css
@@ -31,26 +31,22 @@
   box-shadow: 0px 5px 5px rgba(48, 124, 255, 0.1);
   letter-spacing: 1px;
 }
-.join-chat-time {
+.chat-time {
   font-size: 12px;
-  color: #6b7280;
+  color: #fff;
   letter-spacing: 1px;
   margin-bottom: 1px;
   padding: 3px 8px;
-  background: #f3f4f6;
-  position: absolute;
+  background: #6b7280;
+  border-radius: 5px;
+  box-shadow: 0px 5px 5px rgba(48, 124, 255, 0.1);
 }
 .line {
-  position: relative;
   width: 100%;
-  height: 1px;
-  background-color: #e2e2e2;
-  left: 0;
-  bottom: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin: 20px 0px;
 }
 .message-user {
   margin-left: auto;
@@ -95,6 +91,25 @@
 .message-time {
   font-size: 12px;
   color: #6b7280; /* text-muted-foreground */
+  margin-top: 0px;
+  padding-left: 4px;
+  padding-right: 4px;
+  letter-spacing: 0.5px;
+}
+.join-chat-time {
+  font-size: 12px;
+  margin-left: 20px;
+  color: #858585;
+  margin-top: 0px;
+  padding-left: 4px;
+  padding-right: 4px;
+  letter-spacing: 0.5px;
+}
+
+.read-receipt-status {
+  font-size: 12px;
+  position: absolute;
+  color: #6b7280;
   margin-top: 0px;
   padding-left: 4px;
   padding-right: 4px;
