--- a/src/page/Chat/Chat.css
+++ b/src/page/Chat/Chat.css
@@ -350,6 +350,22 @@
   width: 100%;
 }
 
+.is_typing {
+  font-size: 14px;
+  color: #2f7eff;
+  font-weight: 600;
+  margin: 0;
+  text-align: center;
+}
+
+.typing-indicator {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  padding: 0px 5px;
+  align-items: center;
+}
+
 .scroll-to-bottom-btn {
   width: 50px;
   min-height: 50px;
